4. Thread без общих ресурсов [#267919 #522549]